# OpenEyes

./: .gitignore  CMakeLists.txt  README.md
core/src/: main.c
core/src/logging/: log.h
docs/: Build-LinuxUbuntu.md  Build-MacOS.md  CMakeLists.txt  ChangeLog.md  FileStructure.md
lib/: CMakeLists.txt
scripts/: run-example.sh
src/: main.c  old-main.txt
src/capture/: capture_frame.c  capture_frame.h  videoStream.c  videoStream.h
src/network/: NETWORK.md
src/util/logging/: log.c
